- https://github.com/eclipse-syson/syson/issues/175[#175] [diagrams] Add the State Transition view diagram
- https://github.com/eclipse-syson/syson/issues/242[#242] [diagrams] Handle Inherited features in features compartments.
- https://github.com/eclipse-syson/syson/issues/217[#217] [diagrams] Handle Accept Action Usage

== v2024.3.0

=== Breaking changes

- Refactor Node Descriptions Providers in General View: all Definitions and Usages Node Descriptions Providers (e.g. `PartDefinitionNodeDescriptionProvider` or `ItemUsageNodeDescriptionProvider`) have been replaced by two new Node Descriptions Providers: `DefinitionNodeDescriptionProvider` and `UsageNodeDescriptionProvider`.
- Switch to Sirius Web 2024.3.0: `GeneralViewRegistryConfigurer` has been renamed to `GeneralViewDescriptionProvider` as it now implements `IEditingContextRepresentationDescriptionProvider` instead of `IRepresentationDescriptionRegistryConfigurer`. Same for `InterconnectionViewRegistryConfigurer`.
`SysMLv2ObjectService` has been renamed into `SysMLv2LabelService` as it now implements `ILabelServiceDelegate` instead of `IObjectServiceDelegate`.
- https://github.com/eclipse-syson/syson/issues/93[#93] [diagrams] Refactor diagrams code with creation of the diagram-common-view module to gather all cross diagram tools:
  * `DescriptionNameGenerator` is no longer a static class with static methods.
  There should be one name generator per diagram owning the diagram prefix used to prefix all descriptions for this diagram (for instance `GVDescriptionNameGenerator`)

=== Dependency update

- https://github.com/eclipse-syson/syson/issues/71[#71] [releng] Add `commons-io 2.11.0` dependency explicitly in `syson-application-configuration`.
- Switch to Sirius Web 2024.3.0

=== Bug fixes
- https://github.com/eclipse-syson/syson/issues/118[#118] Subclassification edge has been broken during this release

=== Improvements
