@@ -59,6 +59,7 @@
 - https://github.com/eclipse-syson/syson/issues/175[#175] [diagrams] Add the State Transition view diagram
 - https://github.com/eclipse-syson/syson/issues/242[#242] [diagrams] Handle Inherited features in features compartments.
 - https://github.com/eclipse-syson/syson/issues/217[#217] [diagrams] Handle Accept Action Usage
+- https://github.com/eclipse-syson/syson/issues/285[#285] [interconnection-view] Add rotative images for PortUsage in Interconnection View
 
 == v2024.3.0
 
